--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
 spring.application.name=CRMTravel
 
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/newcrm
-spring.datasource.username=postgres
-spring.datasource.password=root
-#spring.datasource.url=jdbc:postgresql://dpg-cs73c63tq21c73cmino0-a.singapore-postgres.render.com/crm_travel
-#spring.datasource.username=crm_travel_user
-#spring.datasource.password=BAP0F7ULtgYdGttJQI523ThSD3QY8Xah
-# 
+spring.datasource.url=jdbc:postgresql://dpg-cs73c63tq21c73cmino0-a.singapore-postgres.render.com/crm_travel
+spring.datasource.username=crm_travel_user
+spring.datasource.password=BAP0F7ULtgYdGttJQI523ThSD3QY8Xah
+ 
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
