application property cors given in port :3002

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ bezkoder.app.jwtExpirationMs= 86400000
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
-spring.mvc.cors.allowed-origins=http://localhost:3002/
+spring.mvc.cors.allowed-origins=http://localhost:3002
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.mvc.cors.allowed-headers=*
 spring.mvc.cors.allow-credentials=true
