--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=CRMTravel
+server.port = 8081
 
 spring.datasource.url=jdbc:postgresql://dpg-cs73c63tq21c73cmino0-a.singapore-postgres.render.com/crm_travel
 spring.datasource.username=crm_travel_user
